Added client delete page and the corresponding methods.